--- a/resources/css/syle.css
+++ b/resources/css/syle.css
@@ -1,5 +1,5 @@
 :root{
-    --colore-darkred: darkred;
+    --colore-darkred: #8b0000;
     --colore-salmone: #C67F7F;
     --colore-panna: #ececec;
 }
@@ -52,8 +52,8 @@
 .virgoletta1{
     height: 10px;
     width: 10px;
-    margin-top: 15px;
-    margin-left: 5px;
+    margin-top: 10px;
+    margin-left: 10px;
 }
 .virgoletta2{
     height: 10px;
@@ -66,8 +66,10 @@
     background-color: var(--colore-panna);
 }
 .squareMountain{
-    height: 45px;
-    background-color: var(--colore-panna);
+    margin-left: 72px;
+    height: 55px;
+    width: 55px;
+    /* background-color: var(--colore-panna); */
 
 }
 .Map{
@@ -99,7 +101,7 @@
     border: 2px solid darkred;
     position: absolute;
     bottom: -26px;
-    left: 60px;
+    left: 72px;
     background-color: var(--colore-panna);
 }
 .lorem-dolor{
