--- a/resources/css/syle.css
+++ b/resources/css/syle.css
@@ -17,7 +17,7 @@
 .switzerland{
     width: 100%;
     height: 600px;
-    background-image: linear-gradient(to bottom, white 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%), url("/public/img/sfondo.jpg");
+    background-image: linear-gradient(to bottom, white 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%), url("/public/img/stampa.jpg");
     background-size: cover;
     z-index: 2;
 }
@@ -138,7 +138,8 @@
     font-size: smaller;
     font-family: 'Rajdhani', sans-serif;
     font-weight: 500;
-    padding: 10px, 30px;
+    padding: 10px;
+    border-radius: 20px;
 }
 
 .h2G{
